2009-09-23  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (importComponent:): Fixed 
	addition of BEGIN/END block.
	* SoObjects/Appointments/SOGoWebAppointmentFolder.m (deleteAllContent):
	Created deleteAllContent to be able to change it in the store bundle.
	* UI/Scheduler/UIxCalMainActions.m (addWebCalendarAction): Small improvement.

2009-09-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SOGoAutoCompletion.js
	(SOGoAutoCompletionInterface.onKeyDown): (needs review) we don't
	overwrite the input's name attributes with the "uname". Otherwise
	the form will not have the correct data when submitted and the
	to/cc/bcc fields will be ignored.

2009-09-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m 
	We now fallback to the default system selected day.

2009-09-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the documentation for the Invisible -> Flagged
	mail column change.
	* SoObjects/Contacts/NGVCard+SOGo.m - better error-handling.

2009-09-22  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalFolderActions.m (exportAction): Used
	bareFetchFields from SOGoAppointmentFolder instead of fetchFields
	from SOGoGCSFolder.

2009-09-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m (-fetchPlainTextParts:):
	handle the fact that the "fetch" key in a RawResponse (NGHashMap)
	may not be the only response. Since [NGHashMap objectForKey:]
	returns only the first one, we use the new "flattenedDictionaries"
	to make sure we can retrieve all requested keys.

	* SoObjects/SOGo/NSArray+Utilities.m (-flattenedDictionaries): new
	method that merges the keys and values of all contained
	dictionaries into one single dictionary.

	* Tests/webdavlib.py (_WD_XMLTreeElement.__init__): added a new
	optional parameter "attributes" that enables the setting of
	element attributes during the rendering of the element.
